Finishing responsive layout for tablet and mobile

--- a/css/style.css
+++ b/css/style.css
@@ -261,6 +261,15 @@ textarea {
   .header__menu-nav {
     display: none;
   }
+  .banner {
+    display: none;
+  }
+  .affiliates {
+    display: none;
+  }
+  .misc {
+    display: none;
+  }
 }
 
 /* Medium only */
