--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,8 @@ html {
   color: #222;
   font-size: 1em;
   line-height: 1.4;
+  margin-left: -1rem;
+  margin-right: -1rem;
 }
 
 /*
@@ -350,6 +352,19 @@ p {
   height: 85%;;
 }
 
+.banner-header {
+  justify-content: center;
+}
+
+.banner-header > img {
+  width: 100%;
+  max-height: 70%;
+}
+
+.page__banner {
+  background-color: lightgray;
+}
+
 /* Small only */
 @media screen and (max-width: 39.9375em) {
   .page__header,
@@ -362,7 +377,7 @@ p {
 .section-affiliates,
 .footer {
   margin: auto;
-  width: 80%;
+  width: 20rem;
 }
   .header__menu-nav {
     display: none;
