--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,11 @@
     --lighter-blue: #42a9cc;
     --lighter-dark-blue: #4589b8;
     --light-gray: #ebebeb;
+    --facebook-blue: #527cc4;
+    --google-red: #e46145;
+    --twitter-blue: #00b0e2;
+    --instagram-pink: #f6679c;
+    --wifi-yellow: #fea501;
   }
 
 
@@ -553,6 +558,197 @@ p {
 .header__menu-nav__item__text > p {
   font-size: 0.8rem;
   color: white;
+}
+
+.footer {
+  padding-bottom: 10rem;
+}
+
+.footer-heading {
+  margin: 2rem 0;
+  position: relative;
+  padding-bottom: 2rem;
+}
+
+.footer-heading-content {
+  display: flex;
+  align-items: center;
+  gap: 2rem;
+  padding-bottom: 2rem;
+}
+
+.footer-heading-content::after {
+  position: relative;
+  position: absolute;
+  padding-bottom: 0.1rem;
+  content: "";
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background: linear-gradient(to right, var(--blue) 9%, gray 9%)
+}
+
+.footer-heading-image > img {
+  width: 8rem;
+  height: 8rem;
+  border-radius: 100%;
+}
+
+.footer-heading-text > p {
+  font-style: italic;
+}
+
+.footer-item {
+  width: 95%;
+}
+
+.footer-item-text {
+  margin-bottom: 4rem;
+}
+
+.green-line::after {
+  position: relative;
+  position: absolute;
+  padding-bottom: 0.1rem;
+  content: "";
+  top: 1;
+  left: 0;
+  width: 20%;
+  width: 0;
+  height: 0;
+  border-left: 0.6rem solid transparent;
+  border-right: 0.6rem solid transparent;
+  border-top: 0.6rem solid var(--green);
+  margin-left: 1.5rem;
+}
+
+.green-line {
+  border-bottom: 1px solid var(--green);
+}
+
+.yellow-line::after {
+  position: relative;
+  position: absolute;
+  padding-bottom: 0.1rem;
+  content: "";
+  top: 1;
+  left: 0;
+  width: 20%;
+  width: 0;
+  height: 0;
+  border-left: 0.6rem solid transparent;
+  border-right: 0.6rem solid transparent;
+  border-top: 0.6rem solid var(--yellow);
+  margin-left: 1.5rem;
+}
+
+.yellow-line {
+  border-bottom: 1px solid var(--yellow);
+}
+
+.red-line::after {
+  position: relative;
+  position: absolute;
+  padding-bottom: 0.1rem;
+  content: "";
+  top: 1;
+  left: 0;
+  width: 20%;
+  width: 0;
+  height: 0;
+  border-left: 0.6rem solid transparent;
+  border-right: 0.6rem solid transparent;
+  border-top: 0.6rem solid var(--red);
+  margin-left: 1.5rem;
+}
+
+.red-line {
+  border-bottom: 1px solid var(--red);
+}
+
+.footer-item-body-text > p {
+  font-size: 0.8rem;
+  width: 100%;
+  line-height: 1.5rem;
+}
+
+.footer-body-icons {
+  display: flex;
+  gap: 0.3rem;
+}
+
+.footer-body-icons > i {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 3rem;
+  height: 3rem;
+}
+
+.facebook-background {
+  background-color: var(--facebook-blue);
+}
+
+.google-background {
+  background-color: var(--google-red);
+}
+
+.twitter-background {
+  background-color: var(--twitter-blue);
+}
+
+.instagram-background {
+  background-color: var(--instagram-pink);
+}
+
+.wifi-background {
+  background-color: var(--wifi-yellow);
+}
+
+.footer-item-content-photos {
+  row-gap: 0.5rem;
+  column-gap: 0.5rem;
+  display: grid;
+  margin-top: 2rem;
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.footer-item-content-photos > img {
+  width: 7rem;
+  height: 7rem;
+  gap: -1rem;
+}
+
+.footer-item-content-twitter {
+  display: flex;
+  flex-wrap: wrap;
+  row-gap: 1rem;
+  margin-top: -1.5rem;
+}
+
+.footer-item-twitter-icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: gray;
+  width: 3rem;
+  height: 3rem;
+  border-radius: 100%;
+  margin-top: 1.2rem;
+}
+
+.footer-item-twitter-text {
+  font-size: 0.8rem;
+  width: 100%;
+  line-height: 1.5rem;
+  padding-left: 2rem;
+  width: 60%;
+  padding-right: 1rem;
+}
+
+.tweet {
+  font-weight: bold;
+  color: var(--twitter-blue);
 }
 
 /* Small only */
